--- a/DirectoryScanner/MainWindow.xaml
+++ b/DirectoryScanner/MainWindow.xaml
@@ -19,6 +19,6 @@
         <Button x:Name="startButton" Margin="0,10,10,694" Height ="50" Width="202" Content="Start" Click="startTracing" RenderTransformOrigin="0.506,0.521" HorizontalAlignment="Right" BorderBrush="#FF130F0F" IsEnabled="True" Background="White"/>
         <TextBlock x:Name="pathBlock" Margin="596,83,20,304" Height ="50" Width="200" Text="Path to a directory"/>
         <TextBox x:Name="pathBox" Height ="50" Width="200" Margin="596,135,20,261" />
-        <Button x:Name="stopButton" Height ="50" Width="200" Content="Stop" Margin="596,367,20,10"/>
+        <Button x:Name="stopButton" Height ="50" Width="200" Content="Stop" Click="addFile" Margin="596,367,20,10"/>
     </Grid>
 </Window>
