--- a/DirectoryScanner/MainWindow.xaml
+++ b/DirectoryScanner/MainWindow.xaml
@@ -8,12 +8,18 @@
         Title="MainWindow" Height="770" Width="1000" Background="Gray">
     <Grid>
 
-        <TreeView x:Name="treeView1">
+        <TreeView x:Name="treeView1" ItemsSource="{Binding Path=Files}">
             <TreeView.ItemTemplate>
-                <HierarchicalDataTemplate DataType="{x:Type local:File}" ItemsSource="{Binding files}">
-                    <TextBlock Text="{Binding Name}" />
+                <HierarchicalDataTemplate DataType="{x:Type local:File}" ItemsSource="{Binding Path = Files }">
+                    <TextBlock Text="{Binding Path = Name }" />
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
+
+            <TreeView.ItemContainerStyle>
+                <Style TargetType="TreeViewItem">
+                    <Setter Property="IsExpanded" Value="True" />
+                </Style>
+            </TreeView.ItemContainerStyle>
         </TreeView>
 
         <Button x:Name="startButton" Margin="0,10,10,694" Height ="50" Width="202" Content="Start" Click="startTracing" RenderTransformOrigin="0.506,0.521" HorizontalAlignment="Right" BorderBrush="#FF130F0F" IsEnabled="True" Background="White"/>
