--- a/DirectoryScanner/MainWindow.xaml
+++ b/DirectoryScanner/MainWindow.xaml
@@ -4,25 +4,35 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DirectoryScanner"
+        xmlns:conv="clr-namespace:DirectoryScannerConverters"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         mc:Ignorable="d"
         Title="MainWindow" Height="770" Width="1000" Background="Gray">
     <Window.Resources >
         <BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+        <conv:BoolToImageConverter x:Key="BoolToImageConv"/>
     </Window.Resources>
     <Grid Margin="0,0,0,3">
-        <TreeView x:Name="treeView1" Margin="0,0,263,0" >
+        <TreeView x:Name="treeView1" Margin="0,86,263,0" >
             <TreeView.ItemTemplate>
-                <HierarchicalDataTemplate ItemsSource="{Binding Path = Value.Files}">
-                    <TextBlock>
 
-                        <TextBlock.Text>
-                            <MultiBinding StringFormat="{}{0} ({1} байт)">
-                                <Binding Path="Value.Name" />
-                                <Binding Path="Value.Size" />
-                            </MultiBinding>
-                        </TextBlock.Text>
-                    </TextBlock>
+                <HierarchicalDataTemplate ItemsSource="{Binding Path = Value.Files}">
+                    <StackPanel Orientation="Horizontal">
+                        <Image x:Name="img" Source="{Binding Path= Value.IsDirectory, Converter={StaticResource BoolToImageConv}}"  Width="16" Height="16" Stretch="Fill"/>
+                        
+                       <!-- <Image Name="img" Width="16" Height="16" Stretch="Fill" 
+                                                  Source="C://Users//Veronika//Documents//work//5 сем//СПП//LR3//file.png" />
+                       -->
+                        <TextBlock>
+
+                            <TextBlock.Text>
+                                <MultiBinding StringFormat="{} {0} ({1} байт)">
+                                    <Binding Path="Value.Name" />
+                                    <Binding Path="Value.Size" />
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
+                    </StackPanel>
 
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
@@ -35,11 +45,14 @@
             </TreeView.ItemContainerStyle>
         </TreeView>
 
+       <!-- <BitmapImage x:Key="Icon_FolderOpen"   UriSource="C://Users//Veronika//Documents//work//5 сем//СПП//LR3//file.png"   />
+        <BitmapImage x:Key="Icon_FolderClosed" UriSource="C://Users//Veronika//Documents//work//5 сем//СПП//LR3//folder.png" />-->
+
         <!-- <fa:ImageAwesome x:Name="IconSpinner" DataContext="{Binding Path=directoryTracer.queue}"  Icon="Spinner" Visibility="{Binding Path=IsWorking, Converter={StaticResource BoolToVisibilityConverter}}" Spin="True" Height="48" Width="48" RenderTransformOrigin="0.592,0.571" Margin="841,243,111,463" />
         <ProgressBar Minimum="0" Maximum="100" Value="75" Height="20" Width="200" Margin="789,366,11,365"/>-->
 
         <Button x:Name="startButton" 
-                Margin="0,10,10,668" Width="236"
+                Margin="0,121,10,557" Width="236"
                 Content="Start" 
                 RenderTransformOrigin="0.506,0.521"
                 HorizontalAlignment="Right" 
@@ -49,7 +62,7 @@
                 Command="{Binding TraceDirectoryButton}"/>
 
         <Button x:Name="openFileDialogButton" 
-                Margin="0,204,10,474" Width="236"
+                Margin="0,17,10,661" Width="236"
                 Content="Choose file" 
                 RenderTransformOrigin="0.506,0.521"
                 HorizontalAlignment="Right" 
@@ -58,7 +71,7 @@
                 Background="White" 
                 Command="{Binding OpenFileDialogButton}"/>
 
-        <TextBox Margin="742,298,10,394" FontSize="16" Text="{Binding SelectedPath}"/>
+        <TextBox Margin="10,17,263,675" FontSize="16" Text="{Binding SelectedPath}"/>
 
         <Button x:Name="stopButton" 
                 Content="Stop"
